<resources>
    <string name="app_name">Nagra</string>
    <string name="login_splash_label3">Already have an account? </string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="enter_your_password">Enter my password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_new">Forgot Password</string>
    <string name="settings_title">Settings</string>
    <string name="settings_profile_label">My Profile</string>
    <string name="settings_myprofile_desc">Personal Information, Change Password</string>
    <string name="settings_about">About Nagra</string>
    <string name="settings_about_reltime_label">Nagra Ecosystem, Partners</string>
    <string name="settings_notification_label">App Notifications, Biometrics</string>
    <string name="settings_logout_label">Logout</string>
    <string name="settings_save_changes">Save changes</string>
    <string name="settings_profile_title">Personal Information</string>
    <string name="settings_profile_fullname_label">Full name</string>
    <string name="settings_profile_email_label">Email</string>
    <string name="settings_profile_dob_label">DOB</string>
    <string name="settings_profile_phone_label">Phone</string>
    <string name="settings_profile_country_label">Country</string>
    <string name="settings_profile_password_label">Password</string>
    <string name="settings_profile_change_password"><u>Change Password</u></string>
    <string name="settings_profile_update_label"><u>Update</u></string>
    <string name="settings_profile_change_password_label">Change Password</string>
    <string name="settings_profile_address_label">Addresses</string>
    <string name="settings_profile_edit_label"><u>Edit</u></string>
    <string name="settings_profile_address_label1">Address 1</string>
    <string name="settings_profile_address_label2">Address 2</string>
    <string name="settings_profile_address_city">City</string>
    <string name="settings_profile_address_state">State</string>
    <string name="settings_profile_change_password_desc">Your new password should have atleast 6<br>characters and cannot contain</br>  spaces or match your email address.</string>
    <string name="settings_profile_current_password_label">Current password</string>
    <string name="settings_faq_option1">Top Questions</string>
    <string name="settings_profile_update_phone_title">Update Phone Number</string>
    <string name="settings_profile_update_current_phone_label">CURRENT PHONE NUMBER</string>
    <string name="settings_profile_update_new_phone_label_hint">Enter new phone number</string>
    <string name="settings_profile_update_new_phone_label">NEW PHONE NUMBER</string>
    <string name="settings_profile_update_verify_label">Verify</string>
    <string name="settings_profile_update_email_title">Update Email</string>
    <string name="settings_profile_update_current_email_label">CURRENT EMAIL ADDRESS</string>
    <string name="settings_profile_update_new_email_label">NEW EMAIL ADDRESS</string>
    <string name="settings_profile_update_new_email_hint_label">Enter New Email Address</string>
    <string name="settings_faq_subtitle">Why do we use it?</string>
    <string name="settings_faq_content_sample">It is a long established fact that a reader will be distracted by the
        readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters </string>
    <string name="settings_nands_title">Notifications &amp; Security</string>
    <string name="settings_nands_sub_title">Notifications</string>
    <string name="settings_nands_market_variation_label">Market Variation</string>
    <string name="settings_nands_maket_variation_desc">We will send you notifications when there is a market variation on RTC</string>
    <string name="settings_nands_lending_update_label">Lending Updates</string>
    <string name="settings_nands_lending_update_desc">We will send you notifications when there is an update in your lendings</string>
    <string name="settings_nands_security_title">Security</string>
    <string name="settings_nands_biometrics_title">Biometrics</string>
    <string name="settings_nands_biometrics_desc">Use biometrics to confirm your payments and transactions</string>
    <string name="kyc_title_label">KYC Verification</string>
    <string name="kyc_desc">Now, let’s authenticate your account to ensure safe transactions</string>
    <string name="kyc_button_later">Do it later</string>
    <string name="kyc_button_now">Do it now</string>
    <string name="kyc_readstorage_permission">You need to grant storage permission to upload documents</string>
    <string name="kycin_title_label">eKYC Verification</string>
    <string name="kycin_step1_label">Step 1</string>
    <string name="kycin_selectdoc_label">Select Document</string>
    <string name="kycin_docdesc_label">Let\'s verify your identity using a government released document</string>
    <string name="kycin_doctype_label">DOCUMENT TYPE</string>
    <string name="kycin_step2_label">Step 2</string>
    <string name="kycin_details_label">Enter details</string>
    <string name="kycin_detailsdesc_label">Fill up the details of the document select us for to verify</string>
    <string name="kycin_name_label">FULL NAME</string>
    <string name="kycin_document_id">DOCUMENT NUMBER</string>
    <string name="kycin_dob_label">DATE OF BIRTH</string>
    <string name="kycin_expdate_label">EXP DATE</string>
    <string name="kycin_issuedate_label">ISSUE DATE</string>
    <string name="kycin_step3_label">Step 3</string>
    <string name="kycin_step4_label">Step 4</string>
    <string name="kycin_updatedoc_label">Upload document</string>
    <string name="kycin_upload_video_label">Upload video</string>
    <string name="kycin_updatedocdesc_label">Finally, Upload a photo of the mentioned \ndocument</string>
    <string name="kycin_upload_video_desc">Finally, Record a video recording of your face. (Please record video maximum of
        15 Seconds and with front, left and right looking face)</string>
    <string name="kycin_reupload_label"><u>Reupload</u></string>
    <string name="kycin_submit_button_label">Submit</string>
    <string name="kycin_resubmit_button_label">Re Submit</string>
    <string name="kycin_upload_error"><font color="#FF6159">Error:</font> Document verification unsuccessful. Uploaded document didn’t match with the document type selected above. </string>
    <string name="kycin_dob_error"><font color="#FF6159">Error:</font> Invalid date of birth entered</string>
    <string name="kycin_ask_permission_camera_storage">You need to grant permissions to capture video</string>
    <string name="kycve_progress_label">eKYC Verification in \nprogress</string>
    <string name="kycve_progress_desc">Your documents are verified by our trusted agency. You can keep going once it’s done.</string>
    <string name="kycve_finish_label">Finish</string>
    <string name="please_enter_the_registered_email_id">Please enter the registered email ID and we will send you an OTP to that mail.</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_we_just_sent_you_on_your_email_address">Enter the OTP we just sent you on your email address</string>
    <string name="enter_the_otp_we_just_sent_you_on_your_phone">Enter the OTP we just sent you on your phone number </string>
    <string name="resend_otp"><u>Resend code</u></string>
    <string name="verify_otp">Verify OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_mpin">Reset Transaction PIN</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="new_pin">NEW PIN</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="confirm_new_pin">CONFIRM NEW PIN</string>
    <string name="cancel">Cancel</string>
    <string name="password_n_successfully_reset">Password \n Successfully Reset</string>
    <string name="pin_n_successfully_reset">Pin \n Successfully Reset</string>
    <string name="your_password_has_been_successfully_reset_for_your_account">Your password has been successfully reset for your account.</string>
    <string name="your_pin_has_been_successfully_reset_for_your_account">Your pin has been successfully reset for your account.</string>
    <string-array name="id_doc_list">
        <item>Driving License</item>
        <item>Passport</item>
    </string-array>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello</string>
    <string name="all_time">All Time</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="my_balance">My Balance</string>
    <string name="reltime">Nagra</string>
    <string name="some_thing_went_wrong">something went wrong</string>
    <string name="please_check_net">Please check the internet connection</string>
    <string name="invite_your_friends_and_family_to_join_reltime_ecosystem_and_get_rewarded">Invite your friends and family to join the Nagra ecosystem</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="new_pass_and_confirm_pass_match">New password and confirm new password must be same.</string>
    <string name="new_pin_and_confirm_pin_match">New pin and confirm pin must match.</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_home">Go to Home</string>
    <string name="cc_select_country_code">Enter a select your country code</string>
    <string name="continue_">Continue</string>
    <string name="let_s_set_up_your_reltime_profile">Let’s set up my Nagra profile</string>
    <string name="please_fill_in_your_full_name_and_e_mail_address">Please fill in full name and E-mail</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter my first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter my last name</string>
    <string name="enter_your_e_mail_address">Enter my E-mail</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="lbl_tvTitle">Nagra needs your permission</string>
    <string name="lbl_tvLocationPermissionTitle">Location permission</string>
    <string name="lbl_tvLocationDetails">Nagra needs this to detect any suspicious activity and keep your account safe and secure.</string>
    <string name="lbl_tvContactPermissionTitle">Contact access</string>
    <string name="lbl_tvContactDetails">Nagra asks for your permission to connect you with your contacts smoothly.</string>
    <string name="lbl_tvPolicy">By clicking on “Continue” button, you agree to the <u>Nagra End User Privacy Policy</u>.</string>
    <string name="permission">Permission</string>
    <string name="lbl_tvPhotosPermissionTitle">Photos</string>
    <string name="lbl_tvPhotosDetails">Nagra needs to notify and update you on all transactions, joint account requests and more.</string>
    <string name="update_available">Update available</string>
    <string name="keep_reltime_updated_to_access_new_features_and_design_improvements">Keep Nagra updated to access new features and design improvements.</string>
    <string name="no_thanks">No thanks</string>
    <string name="update">Update</string>
</resources>