<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activity.v2.signUp.SetUpProfileActivity">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/back_button"
        android:id="@+id/ibBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp4"
        android:layout_marginTop="@dimen/dp16"/>
    <TextView
        android:id="@+id/tvTitle"
        style="@style/BoldTextViewHigh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/let_s_set_up_your_reltime_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBack"
        android:layout_marginTop="@dimen/dp4"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:fontFamily="@font/inter_light"
        android:text="@string/please_fill_in_your_full_name_and_e_mail_address"
        android:textColor="@color/white80"
        android:textSize="@dimen/sp12"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"/>


    <TextView
        android:id="@+id/tvFirstName"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.2"
        android:text="@string/first_name"
        android:textAllCaps="true"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/EditTextDefault"
        android:layout_marginTop="@dimen/dp5"
        android:maxLength="45"
        android:hint="@string/enter_your_first_name"
        android:textColorHint="@color/white20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName" />


    <TextView
        android:id="@+id/tvErrorFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/red"
        android:textSize="@dimen/sp12"
        android:text="@string/please_enter_your_first_name"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"/>


    <TextView
        android:id="@+id/tvLastName"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.2"
        android:text="@string/last_name"
        android:textAllCaps="true"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/EditTextDefault"
        android:layout_marginTop="@dimen/dp5"
        android:maxLength="45"
        android:hint="@string/enter_your_last_name"
        android:textColorHint="@color/white20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLastName" />


    <TextView
        android:id="@+id/tvErrorLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/red"
        android:textSize="@dimen/sp12"
        android:text="@string/please_enter_your_last_name"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintEnd_toEndOf="@+id/etLastName"/>

    <TextView
        android:id="@+id/tvEmail"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.2"
        android:text="@string/e_mail_address"
        android:textAllCaps="true"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditTextDefault"
        android:layout_marginTop="@dimen/dp5"
        android:maxLength="45"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_e_mail_address"
        android:textColorHint="@color/white20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />


    <TextView
        android:id="@+id/tvErrorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/red"
        android:textSize="@dimen/sp12"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"/>




    <Button
        android:id="@+id/btnNext"
        style="@style/BoldButtonHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp32"
        android:maxLength="200"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp60"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>