<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".views.permission.PermissionActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivActionbarIcon"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nagra_round_small" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:text="@string/permission"
        android:textColor="@color/white80"
        android:fontFamily="@font/inter_light"
        android:textSize="@dimen/sp12"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toBottomOf="@+id/ivActionbarIcon"
        app:layout_constraintStart_toEndOf="@+id/ivActionbarIcon"
        app:layout_constraintTop_toTopOf="@+id/ivActionbarIcon" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/lbl_tvTitle"
        style="@style/BoldTextViewHigh"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="@+id/ivActionbarIcon"
        app:layout_constraintTop_toBottomOf="@+id/ivActionbarIcon" />

    <View
        android:id="@+id/vPermissionDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhotosDetails"
        android:layout_marginBottom="-28dp"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/permission_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLocationPermission"
        app:layout_constraintTop_toTopOf="@+id/vPermissionDetails"
        app:layout_constraintStart_toStartOf="@+id/vPermissionDetails"
        android:layout_marginStart="@dimen/dp21"
        android:layout_marginTop="@dimen/dp28"
        app:srcCompat="@drawable/ic_location_permission"
        android:layout_width="@dimen/dp17"
        android:layout_height="@dimen/dp17"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocationPermissionTitle"
        app:layout_constraintTop_toTopOf="@+id/ivLocationPermission"
        app:layout_constraintStart_toEndOf="@+id/ivLocationPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp21"
        app:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/sp14"
        android:text="@string/lbl_tvLocationPermissionTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocationDetails"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/tvLocationPermissionTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationPermissionTitle"
        app:layout_constraintEnd_toEndOf="@+id/vPermissionDetails"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/lbl_tvLocationDetails"
        android:layout_marginTop="@dimen/dp5"
        app:fontFamily="@font/inter_regular"
        android:textColor="@color/white80"
        android:textSize="@dimen/sp12"
        android:layout_height="wrap_content"/>



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivContactPermission"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationDetails"
        app:layout_constraintStart_toStartOf="@+id/vPermissionDetails"
        android:layout_marginStart="@dimen/dp21"
        android:layout_marginTop="@dimen/dp28"
        app:srcCompat="@drawable/ic_contact_permission"
        android:layout_width="@dimen/dp17"
        android:layout_height="@dimen/dp17"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContactPermissionTitle"
        app:layout_constraintTop_toTopOf="@+id/ivContactPermission"
        app:layout_constraintStart_toEndOf="@+id/ivContactPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp21"
        app:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/sp14"
        android:text="@string/lbl_tvContactPermissionTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContactDetails"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/tvContactPermissionTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvContactPermissionTitle"
        app:layout_constraintEnd_toEndOf="@+id/vPermissionDetails"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/lbl_tvContactDetails"
        android:layout_marginTop="@dimen/dp5"
        app:fontFamily="@font/inter_regular"
        android:textColor="@color/white80"
        android:textSize="@dimen/sp12"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhotosPermission"
        app:layout_constraintTop_toBottomOf="@+id/tvContactDetails"
        app:layout_constraintStart_toStartOf="@+id/vPermissionDetails"
        android:layout_marginStart="@dimen/dp21"
        android:layout_marginTop="@dimen/dp28"
        app:srcCompat="@drawable/ic_photos_permission"
        android:layout_width="@dimen/dp17"
        android:layout_height="@dimen/dp17"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhotosPermissionTitle"
        app:layout_constraintTop_toTopOf="@+id/ivPhotosPermission"
        app:layout_constraintStart_toEndOf="@+id/ivPhotosPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp21"
        app:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/sp14"
        android:text="@string/lbl_tvPhotosPermissionTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhotosDetails"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/tvPhotosPermissionTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvPhotosPermissionTitle"
        app:layout_constraintEnd_toEndOf="@+id/vPermissionDetails"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/lbl_tvPhotosDetails"
        android:layout_marginTop="@dimen/dp5"
        app:fontFamily="@font/inter_regular"
        android:textColor="@color/white80"
        android:textSize="@dimen/sp12"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPolicy"
        android:layout_width="0dp"
        android:text="@string/lbl_tvPolicy"
        android:textColor="@color/white80"
        android:textSize="@dimen/sp12"
        app:fontFamily="@font/inter_regular"
        android:layout_marginBottom="@dimen/dp28"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="@+id/bt_login"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"/>
    <Button
        android:id="@+id/bt_login"
        style="@style/BoldButtonHigh"
        android:layout_width="0dp"
        android:text="@string/continue_"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>